[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython",
    "numpy",
    "cmake>=3.20"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyclblast"
version = "1.4.0"
description = "Python bindings for CLBlast, the tuned OpenCL BLAS library"
authors = [
    {name = "Cedric Nugteren", email = "web@cedricnugteren.nl"}
]
license = {text = "Apache Software License"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
keywords = ["OpenCL", "BLAS", "CLBlast", "GEMM", "matrix-multiplication"]
dependencies = [
    "numpy",
    "pyopencl"
]

[project.urls]
Homepage = "https://github.com/CNugteren/CLBlast/blob/master/src/pyclblast"

[tool.setuptools.packages.find]
where = ["src"]
